tests/parsing/smtlib/v2.6/errors/095_get-option_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/095_get-option_unclosed_1.smt2", line 1, character 17-18:
1 | (get-option :foo _)
                     ^
Error while parsing a get-option command, read the reserved word '_',
      but expected a closing parenthesis.
